# ndumpmgr

./: Cargo.toml  README.md
ndumplib/: Cargo.toml
ndumplib/src/: catalog.rs  dump_manager.rs  error.rs  lib.rs  packing.rs  types.rs  utils.rs
ndumplib/src/catalog/: logiqx.rs  naming.rs  nointro.rs  redump.rs
ndumplib/src/dump_manager/: catalog.rs  cuesheets.rs
ndumplib/src/dump_manager/catalog/: nointro.rs
ndumplib/src/dump_manager/cuesheets/: redump.rs
ndumplib/src/packing/: chdman.rs
ndumplib/src/utils/: chdman.rs
ndumpmgr/: Cargo.toml
ndumpmgr/src/: main.rs  settings.rs
src/: main.rs  settings.rs
src/catalog/: redump.rs
