[package]
name = "ndumpmgr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
compress-tools = "0.15.1"
log = "0.4.27"
roxmltree = "0.20.0"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
simplelog = "0.12.2"
tempfile = "3.20.0"
ureq = "3.0.12"
