[package]
name = "ndumplib"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
compress-tools = "0.15.1"
hex = "0.4.3"
log = "0.4.27"
regex = "1.11.1"
roxmltree = "0.20.0"
rusqlite = "0.37.0"
tempfile = "3.20.0"
ureq = { version = "3.0.12", features = ["cookies"] }
visdom = "1.0.3"
